--- a/index.html
+++ b/index.html
@@ -3,11 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tic-Tac-Toe</title>
     <link rel="stylesheet" href="./styles.css">
     <script src="./script.js" defer></script>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="header">
+            <div>
+                <p>Tic Tac Toe</p>
+            </div>
+        </div>
+        <div class="main-content">
+            <div class="game-score">
+                <div class="player-one">
+                    Player one <span>0</span>
+                </div>
+                <div class="player-two">
+                    Player Two <span>0</span>
+                </div>
+                <div class="ties">
+                    Tie <span>0</span>
+                </div>
+            </div>
+            <div class="game-board">
+
+            </div>
+        </div>
+        <div class="footer">
+            <p>Made by M.iqbal. @ odin project tic-tac-toe</p>
+        </div>
+    </div>
 </body>
 </html>
