feat: add board message turn in html; feat: implement scoring by using Score object to track and modify score

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             </div>
         </div>
         <div class="main-content">
+            <div class="game-message">
+                <p>Players one's move..</p>
+            </div>
             <div class="game-score">
                 <div class="player-one">
                     Player one <span>0</span>
@@ -27,7 +30,7 @@
                 </div>
             </div>
             <div class="game-board">
-
+                
             </div>
         </div>
         <div class="footer">
