feat: add and implement reset button with reset method

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <div class="game-board">
                 
             </div>
+            <button class="restart">Restart</button>
         </div>
         <div class="footer">
             <p>Made by M.iqbal. @ odin project tic-tac-toe</p>
