feat: add styling to header board; fix: fixing minor bugs display screen not working correctly after a win

--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
 </head>
 <body>
     <div class="container">
-        <div class="header">
-            <div>
-                <p>Tic Tac Toe</p>
-            </div>
-        </div>
+        <div class="header"></div>
         <div class="main-content">
-            <div class="game-message">
-                <p>Players one's move..</p>
+            <div class="nav-info">
+                <div class="game-message">
+                    <p>Players one's move..</p>
+                </div>
+                <button class="restart">Restart</button>
             </div>
             <div class="game-score">
                 <div class="player-one">
@@ -32,7 +31,6 @@
             <div class="game-board">
                 
             </div>
-            <button class="restart">Restart</button>
         </div>
         <div class="footer">
             <p>Made by M.iqbal. @ odin project tic-tac-toe</p>
