feat: implement game over dialog window

--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
             <div class="game-board">
                 
             </div>
+            <dialog class="game-dialog">
+                <h3>Continue?</h3>
+                <div class="button-dialog">
+                    <button value="cancel" formmethod="dialog" formnovalidate>No</button>
+                    <button id="yesBtn" value="default">Yes</button>
+                </div>
+            </dialog>
         </div>
         <div class="footer">
             <p>Made by M.iqbal. @ odin project tic-tac-toe</p>
