fix: game over dialog correctly fixed to show message game; add some aligment to dialog window

--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
             </div>
             <dialog class="game-dialog">
                 <h3></h3>
+                <h3>Continue?</h3>
                 <div class="button-dialog">
-                    <button value="cancel" formmethod="dialog" formnovalidate>No</button>
+                    <button id="noBtn" value="cancel" formmethod="dialog" formnovalidate>No</button>
                     <button id="yesBtn" value="default">Yes</button>
                 </div>
             </dialog>
