fix: players namedidnt show up after input has now been fixed; rewrite some method logic on screenController as before causing a display bug; replace value with placeholder instead for input as it will send empty with default players name input

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             </div>
             <div class="game-score">
                 <div class="player-one">
-                    Player one <span>0</span>
+                    <span>Player one</span> <span>0</span>
                 </div>
                 <div class="player-two">
-                    Player Two <span>0</span>
+                    <span>Player Two</span> <span>0</span>
                 </div>
                 <div class="ties">
                     Tie <span>0</span>
@@ -44,11 +44,11 @@
                     <h3>Enter player's name</h3>
                     <div class="form-row">
                         <label for="player-one-name">Player one</label>
-                        <input type="text" id="player-one-name" name="player-one-name" placeholder="Joe"  value="Player One" pattern="[a-zA-Z0-9]+">
+                        <input type="text" id="player-one-name" name="player-one-name" placeholder="Joe"  pattern="[a-zA-Z0-9]+">
                     </div>
                     <div class="form-row">
-                        <label for="player-two">Player two</label>
-                        <input type="text" id="player-two-name" name="player-two-name" placeholder="Jane" value="Player Two" pattern="[a-zA-Z0-9]+">
+                        <label for="player-two-name">Player two</label>
+                        <input type="text" id="player-two-name" name="player-two-name" placeholder="Jane" pattern="[a-zA-Z0-9]+">
                     </div>
                     <div class="button-dialog">
                         <button id="confirmNames" type="submit">Start Game</button>
