limit names input to 12 by giving maxlength attr

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
                     <h3>Enter player's name</h3>
                     <div class="form-row">
                         <label for="player-one-name">Player one</label>
-                        <input type="text" id="player-one-name" name="player-one-name" placeholder="Joe"  pattern="[a-zA-Z0-9]+">
+                        <input type="text" id="player-one-name" name="player-one-name" placeholder="Joe"  maxlength="12" pattern="[a-zA-Z0-9]+">
                     </div>
                     <div class="form-row">
                         <label for="player-two-name">Player two</label>
-                        <input type="text" id="player-two-name" name="player-two-name" placeholder="Jane" pattern="[a-zA-Z0-9]+">
+                        <input type="text" id="player-two-name" name="player-two-name" placeholder="Jane" maxlength="12" pattern="[a-zA-Z0-9]+">
                     </div>
                     <div class="button-dialog">
                         <button id="confirmNames" type="submit">Start Game</button>
