add link credit in footer

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </dialog>
         </div>
         <div class="footer">
-            <p>Made by M.iqbal. @ odin project tic-tac-toe</p>
+            <p>Code by <a href="https://github.com/mbale014">iqbal</a></p>
         </div>
     </div>
 </body>
